# BatchMonitor

./: .gitattributes  .gitignore  BatchMonitor.py  README.md  batch_collection.pkl  demand.pkl  pyproject.toml
.streamlit/: config.toml
BatchMonitor/: __init__.py  __main__.py  lib_app.py  lib_batches.py  lib_format.py  lib_functions_streamlit.py  lib_item_request.py  lib_optimization.py
docs/: UTILISATION_GUIDE_LIBRARY.md  UTILISATION_GUIDE_STREAMLIT.md  conf.py  index.rst
pages/: 1_Demand_construction.py  2_Batch_creation.py  3_Visualization.py
resolution/: Sujet.md  resolution.ipynb  resolution_with_library.ipynb
tests/: __init__.py  fixture_optimization.py  test_aroundapp.py  test_bar.py  test_batch.py  test_batchCollection.py  test_batchlists.py  test_demo_integration.py  test_dual.py  test_format.py  test_init_integration.py  test_itemRequest.py  test_item_in_batch.py  test_itemlistRequest.py  test_new_constraints.py  test_preprocess.py  test_primal.py  test_printapp.py  test_rates.py  test_serialization.py  test_solve_integration.py  test_streamlit.py  test_style.py  test_view_integration.py
