[tool.poetry]
name = "BatchMonitor"
version = "0.1.0"
description = "This package provides tools for linear optimization problems, specifically for bulk purchasing. It determines optimal lot combinations, solves dual problems for profit maximization, and analyzes price variation impacts."
authors = ["Hugo COCHEREAU <hugo.cochereau@hotmail.com>, Gregory JAILLET <greg.jlt03@gmail.com>"]
readme = "README.md"
packages = [{ include = "BatchMonitor" }]

[tool.poetry.dependencies]
python = "^3.11"
pyserde = "^0.16.1"
prettytable = "^3.10.0"
pulp = "^2.8.0"
typer = "^0.12.3"
rich = "^13.7.1"
pydantic = "^2.7.1"
pickledb = "^0.9.2"
streamlit = "^1.34.0"
pandas = "^2.2.2"
altair = "^5.3.0"
beartype = "^0.18.5"
openpyxl = "^3.1.2"
numpy = "^1.26.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.2"
mypy = "^1.10.0"
pre-commit = "^3.7.0"
sphinx = "^7.3.7"
flake8 = "^7.0.0"
black = "^24.4.2"
pathlib = "^1.0.1"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Some batches contain weapons not present in other batches. They have been added with a quantity of 0.:UserWarning",
    "ignore:Spaces are not permitted in the name. Converted to '_':UserWarning",
    'ignore:invalid escape sequence "\ ":SyntaxWarning',
]
addopts = "--rootdir=."
